--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 <div class="row">
 <h2>What is SolveSpark?</h2>
 <p>
-SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to, "how can we solve world hunger?"  Traditionally, only the powerful got to solve these problems.  Now everyone can play a part.
+SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to, "how can we solve world hunger?"  Traditionally, only the people in power get to solve these problems.  Now everyone can play a part.
 </p><p>
 SolveSpark will feature robust and intuitive data analytics that will seamlessly integrate simple problem-solving tools to help users define the problem, dig to its root cause, define requirements, compare alternatives, and ultimately, find the best solution. This will enable users to "crowd-solve" problems together in a methodical, comprehensive, and transparent manner.
 </p><p>
@@ -166,7 +166,7 @@ It excites me greatly that there are a growing number of amazing sites geared to
 <div class="row">
 <h2>How will you measure social impact?</h2>
 <p>
-    Social impact will be measured in a variety of ways on the SolveSpark platform. Metrics such as number of users, number of posts, number of votes, demographics reached, and number of problems solved will be gathered and analyzed in real-time.
+Social impact will be measured in a variety of ways on the SolveSpark platform. Metrics such as number of users, number of posts, number of votes, demographics reached, and number of problems solved will be gathered and analyzed in real-time.
 </p><p>
 Social impact in the context of daily life across the globe will be more difficult to measure, however, it is possible that solutions attributed to SolveSpark create enough positive change throughout the world to make a visible difference.
 </p><p>
@@ -179,7 +179,7 @@ A true utopia may not be a world where problems cease to exist, but perhaps inst
 <div class="row">
 <h2>What is SolveSpark's key innovation?</h2>
 <p>
-   In addition to bringing solid project management practices to the problem-solving process, SolveSpark aims to be a forerunner in data analytics. Analytics will not only process and provide insight into user input and but will also utilize additional user input, such as ratings, to help verify the accuracy of the results and improve algorithms.
+In addition to bringing solid project management practices to the problem-solving process, SolveSpark aims to be a forerunner in data analytics. Analytics will not only process and provide insight into user input and but will also utilize additional user input, such as ratings, to help verify the accuracy of the results and improve algorithms.
 </p><p>
 Sentiment analysis will help summarize viewpoints, pattern recognition will help detect missing pieces and flaws in logic, and ratings input by users will help rank and organize data.
 </p><p>
@@ -253,7 +253,7 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <div class="row">
 <h2>User types</h2>
 <ol type="1">
-    <li><b>Unauthenticated user</b>     <li><b>Registered account</b</ol>
+    <li><p><b>Unauthenticated user</b>     <li><p><b>Registered account</b    <li><p><b>Organization account</b>     <li><p><b>Decision-makers' suite/account</b> </ol>
 </div>
 
 <div class="row">
@@ -333,4 +333,4 @@ SolveSpark would also like to partner with services such as Socrata, that makes 
 <script src="js/inspinia.js"></script>
 </body>
 </html>
-  
+ 
