--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
             <div class="item active">
                 <div class="container">
                     <div class="carousel-caption blank">
-                        <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
+                        <h2>Together, we will <strong>crowd-solve</strong> the world's <i>toughest</i> problems</h2>
 
                        <!-- <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p> -->
                     </div>
@@ -253,13 +253,7 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <div class="row">
 <h2>User types</h2>
 <ol type="1">
-    <li><p><b>Unauthenticated user</b>     <li><p><b>Registered account</b    <li><p><b>Organization account</b>     <li><p><b>Decision-makers' suite/account</b> </ol>
-</div>
-
-<div class="row">
-<h2>The Big picture and complexity of data</h2>
-<p>
-Breaking down a problem into its individual components may be simple, but world is complex and made up of a dizzying array of intertwined relationships.  Solving one problem may have unpredictable ripple effects on other problems.  Solving many problems at once may introduce a dangerous amount of complexity and uncertainty to the world.  Part of the project management process involves identifying constraints, assumptions, risks, and other factors attributed to the problem scenario.  With robust analytics we hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
+    <li><p><strong>Unauthenticated user</strong>     <li><p><strong>Registered account</strong hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
 </p>
 <p>
 Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
@@ -333,4 +327,3 @@ SolveSpark would also like to partner with services such as Socrata, that makes 
 <script src="js/inspinia.js"></script>
 </body>
 </html>
- 
