--- a/about.html
+++ b/about.html
@@ -254,7 +254,16 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <h2>User types</h2>
 <p>
 <ol type="1">
-    <li><p><strong>Unauthenticated user</strong>     <li><p><strong>Registered account</strong hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
+    <li>Unauthenticated User     <li>Account Registered these users have registered an E-mail address, username, and password.  Users may set preferences and track history.  Users may only register one account per E-mail address.  SolveSpark will use pattern analysis with information such as IP address and MAC address to reduce instances where users register more than one account to influence voting.</li>
+    <li>Anonymous account     <li>account Expert an official account registered to a domain expert.  Expert input may have different weight than other users' input depending on the problem.  Experts must be verified by a professional organization they are affiliated with and vouched for by other experts.</li>
+    <li>Organization Account     <li>Decision-maker account </ol>
+</p>
+</div>
+
+<div class="row">
+<h2>The Big picture and complexity of data</h2>
+<p>
+Breaking down a problem into its individual components may be simple, but world is complex and made up of a dizzying array of intertwined relationships.  Solving one problem may have unpredictable ripple effects on other problems.  Solving many problems at once may introduce a dangerous amount of complexity and uncertainty to the world.  Part of the project management process involves identifying constraints, assumptions, risks, and other factors attributed to the problem scenario.  With robust analytics we hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
 </p>
 <p>
 Additionally, any assumptions and presumed facts that have the potential influence outcomes must be supported by credible evidence.  SolveSpark will be strive to ensure that tough questions are addressed.  (For example, many structures such as bridges and levies fail in extreme weather.  When these structures were designed, it was assumed that such weather conditions would not occur). 
