--- a/about.html
+++ b/about.html
@@ -217,13 +217,13 @@ SolveSpark will need to explore the possibility of users using anonymous account
 <div class="row">
 <h2>Usability</h2>
 <p>
-Simplicity keyanonymousword iswith the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
+Simplicity is key; with the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
 </p><p>
 Posting a problem or idea will not require a login.  One can still track the progress with the URL the system provides or a unique tracking number.  Posts made by users who have not logged in, will undergo more scrutiny to ensure that the content is not spam.  
 </p><p>
 Users who create an account and log in will be able to set preferences, such as following specific topics, search through their user history, and engage more in communities.
 </p><p>
-    The interface will remain simple to reach the broadest audience.  However, there will be a vast array of intuitive tools available for users who want to drive deeper.  Users can further explore additional tools based on different customizable dashboard types.  SolveSpark will feature decision-maker's  that presents facts, figures, and a host of statistical analysis and forecasting tools for authorities that must make the tough decisions.
+The interface will remain simple to reach the broadest audience.  However, there will be a vast array of intuitive tools available for users who want to drive deeper.  Users can further explore additional tools based on different customizable dashboard types.  SolveSpark will feature a <i>decision-maker's interface</i> that presents facts, figures, and a host of statistical analysis and forecasting tools for authorities that must make the tough decisions.
 </p>
 </div>
 
@@ -237,7 +237,8 @@ SolveSpark's analytics may produce a legitimacy rating for each problem-solution
 </div>
 
 <div class="row">
-<h2>Example use case <p>
+<h2>Example use case: DC area commute</h2>
+<p>
 There are plenty of places on the Internet where people can vent their frustrations.  Additionally, there are now a lot of wonderful places where the highly motivated can take their ideas and turn them into something great.
 </p><p>
 But what about all of those valuable insights that people have on a daily basis that never amount to anything, because there is nowhere to put them?
@@ -254,9 +255,13 @@ SolveSpark will not only provide a place where people can easily vent their frus
 <h2>User types</h2>
 <p>
 <ol type="1">
-    <li>Unauthenticated User     <li>Account Registered these users have registered an E-mail address, username, and password.  Users may set preferences and track history.  Users may only register one account per E-mail address.  SolveSpark will use pattern analysis with information such as IP address and MAC address to reduce instances where users register more than one account to influence voting.</li>
-    <li>Anonymous account     <li>account Expert an official account registered to a domain expert.  Expert input may have different weight than other users' input depending on the problem.  Experts must be verified by a professional organization they are affiliated with and vouched for by other experts.</li>
-    <li>Organization Account     <li>Decision-maker account </ol>
+    <li>Unauthenticated User:  these users have not logged into an account and may still browse content safe for minors and post their problems, ideas, and comments.  Upon submission, they will receive a tracking ID and URL.  Users have the option of entering an E-mail address and registering for an account.</li>
+    <li>Registered Account: these users have registered an E-mail address, username, and password.  Users may set preferences and track history.  Users may only register one account per E-mail address.  SolveSpark will use pattern analysis with information such as IP address and MAC address to reduce instances where users register more than one account to influence voting.</li>
+    <li>Anonymous account: a feature available to every registered account. Identifying information is masked from public view to foster freedom of speech worldwide.</li>
+    <li>Expert account: an official account registered to a domain expert.  Expert input may have different weight than other users' input depending on the problem.  Experts must be verified by a professional organization they are affiliated with and vouched for by other experts.</li>
+    <li>Organization Account: an official account used to represent an organization.  Organizations may be nominated to carry out the execution of certain solutions.</li>
+    <li>Decision-maker account: a suite of tools and other resources that aid in making decisions.  Intuitive, yet powerful statistical analysis tools should be available.</li>
+</ol>
 </p>
 </div>
 
