added table of contents

--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
            <div class="navbar-header">
             <div class="navbar-collapse collapse" id="navbar-main">
               <ul class="nav navbar-nav">
-                <li><a class="page-scroll" href="http://solvespark.com" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
-                <li><a class="page-scroll" href="http://solvespark.com/about.html">Vision</a></li>
-                <li><a class="page-scroll" href="http://solvespark.com/demo.html">Demo</a></li>
+                <li><a href="http://solvespark.com" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
+                <li><a href="http://solvespark.com/about.html">Vision</a></li>
+                <li><a href="http://solvespark.com/demo.html">Demo</a></li>
                 <li><a class="page-scroll" href="http://solvespark.com/#timeline">3 Month Timeline</a></li>
                 <li><a class="page-scroll" href="http://solvespark.com/#contact">Contact</a></li>
               </ul>
@@ -75,11 +75,10 @@
 
 <section id="page-top" class="container services">
     <div class="row">
-        <div class="col-lg-12 text-center">
-<!--            <br><br><br><br> -->
-</div>
 
-<div class="row">
+
+
+    <div class="row" id="whatis">
 <h2>What is SolveSpark?</h2>
 <p>
 SolveSpark is a social platform that welcomes all people to post and discuss any kind of problem or idea. Topics discussed can range anywhere from, "the lunches served at the school cafeteria are terrible," all the way up to, "how can we solve world hunger?"  Traditionally, only the people in power get to solve these problems.  Now everyone can play a part.
@@ -93,8 +92,46 @@ SolveSpark's goal is to include the entire world.  We believe that everyone's in
 SolveSpark will give people a voice; not just a voice to those who are used to speaking out, but those who are often underrepresented, like young boys and girls in Afghanistan. Cumulatively, these insights will not only spark countless revelations, but inspire a philosophy of positivity, transparency, and empowerment by showing people that together, we will solve the world's toughest challenges.
 </p>
 </div>
+        <div class="col-lg-4 text-left">
+<!--            <br><br><br><br> -->
+<h2>Learn more...</h2>
+<ol type="1">
+<li><a class="page-scroll" href="#whatis">What is SolveSpark?</a></li>
+<li><a class="page-scroll" href="#inspiration">What was the inspiration behind SolveSpark?</a></li>
+<li><a class="page-scroll" href="#keyproblems">What are the key problems SolveSpark is trying to solve?</a></li>
+<li><a class="page-scroll" href="#customer">Who is SolveSpark's primary customer?</a></li>
+<li><a class="page-scroll" href="#businessplan">What is the business plan?</a></li>
+<li><a class="page-scroll" href="#competition">Who are SolveSpark's competitors?  What is SolveSpark's competetive advantage?</a></li>
+<li><a class="page-scroll" href="#socialinpact">How will you measure social impact?</a></li>
+<li><a class="page-scroll" href="#id=innovation">What is SolveSpark's key innovation?</a></li>
+<li><a class="page-scroll" href="#principles">SolveSpark's Founding Principles</a></li>
+<li><a class="page-scroll" href="#id=freespeech">Freedom of Speech and Anonymity</a></li>
+<li><a class="page-scroll" href="#usability">Usability</a></li>
+<li><a class="page-scroll" href="#transparency">Transparency vs. masking data</a></li>
+<li><a class="page-scroll" href="#usecase">Example use case:  DC area commute</a></li>
+<li><a class="page-scroll" href="#usertypes">User types</a></li>
+<li><a class="page-scroll" href="#bigpicture">The Big picture and complexity of data</a></li>
+<li><a class="page-scroll" href="#integration">Integrating with other apps</a></li>
+</ol>
+</div>
 
-<div class="row">
+<!--<div class="row" id="vision">
+<h2>Vision/Where this fits into the world</h2>
+<p>
+ Think of 
+
+ stakeholders ...if every stakeholder shared a perspective like HONY
+intimacy
+ Humans of New York meets
+
+ Quora
+ Reddit
+
+ the step before crowdfunding
+</p>
+</div>-->
+
+<div class="row" id="inspiration">
 <h2>What was the inspiration behind SolveSpark?</h2>
 <p>
   Back in 2011, I was out for a nightly walk and was thinking about current events.  I felt an air of discontent across America. It felt as if people were blaming the president for not having fixed all of their problems.  I was so frustrated-- I wanted to tell people that one person cannot magically fix the whole world.  We have to get up off the couch and fix things in our own communitites.  I reflected on the systems engineering classes I was taking.  I was learning project management concepts that could teach anyone how to effectively solve any problem.  It was so empowering.  I wanted to find a way to share this with the world.  And as soon as I had the idea, I knew that I could not let it go.  It will be the idea that empowers the world.  Humantiy is ready.
@@ -102,7 +139,7 @@ SolveSpark will give people a voice; not just a voice to those who are used to s
 </div>
 
 
-<div class="row">
+<div class="row" id="keyproblems">
 <h2>What are the key problems SolveSpark is trying to solve?</h2>
 <p>
     SolveSpark addresses several problems:
@@ -128,7 +165,7 @@ SolveSpark creates a centralized location for causes to raise awareness, encoura
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="customer">
 <h2>Who is SolveSpark's primary customer?</h2>
 <p>
     SolveSpark aims to reach all people and spark positive change throughout the world. Specific groups impacted by SolveSpark:
@@ -141,7 +178,7 @@ SolveSpark creates a centralized location for causes to raise awareness, encoura
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="businessplan">
 <h2>What is the business plan?</h2>
 <p>
 SolveSpark will be publicly available for anyone to browse and post to the site. SolveSpark's primary source of income will be through paid monthly and yearly subscriptions for organizations. Organizations are encouraged to establish a profile page to raise awareness on their specific causes and missions, engage users, maximize efforts, and access a customized analytics and tools dashboard.
@@ -154,7 +191,7 @@ If these revenue streams prove insufficient, SolveSpark may sell ad space. The c
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="competition">
 <h2>Who are SolveSpark's competitors?  What is SolveSpark's competetive advantage?</h2>
 <p>
 SolveSpark will challenge users to think critically before arriving at a solution. Many sites promote doing great things, but SolveSpark promotes doing great things responsibly by engaging all stakeholders, defining the problem, outlining requirements, assessing risks, and comparing top solutions.
@@ -163,7 +200,7 @@ It excites me greatly that there are a growing number of amazing sites geared to
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="socialinpact">
 <h2>How will you measure social impact?</h2>
 <p>
 Social impact will be measured in a variety of ways on the SolveSpark platform. Metrics such as number of users, number of posts, number of votes, demographics reached, and number of problems solved will be gathered and analyzed in real-time.
@@ -176,7 +213,7 @@ A true utopia may not be a world where problems cease to exist, but perhaps inst
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="innovation">
 <h2>What is SolveSpark's key innovation?</h2>
 <p>
 In addition to bringing solid project management practices to the problem-solving process, SolveSpark aims to be a forerunner in data analytics. Analytics will not only process and provide insight into user input and but will also utilize additional user input, such as ratings, to help verify the accuracy of the results and improve algorithms.
@@ -189,7 +226,7 @@ SolveSpark also seeks to preserve freedom of speech and will explore creating an
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="principles">
 <h2>SolveSpark's Founding Principles</h2>
 <p>
 SolveSpark will be publicly available for anyone to access.  The qualities that the website will strive to wholly support are universality, transparency, truth, freedom of speech, positivity, and ease of use.
@@ -201,7 +238,7 @@ It is SolveSpark's policy to ensure that positive progress is made.  Hateful and
 Any solution that involves any harm to humans in the short term or long term is not a solution.  There will be cases where we are not ready for a valid solution because the technology may not yet exist or society is not prepared; and that is acceptable.  However, this site will also encourage various types of solutions that can be temporary to help mitigate other problems in preparation for a real, long-term solution.
 </p>
 </div>
-<div class="row">
+<div class="row" id="freespeech">
 <h2>Freedom of Speech and Anonymity</h2>
 <p>
 SolveSpark aims to uphold freedom of speech worldwide and protect users from retaliation or other consequences.  Users will be able to browse and post under an anonymous account that masks such identifying information as IP address, MAC address, and E-mail address from the public.
@@ -214,7 +251,7 @@ SolveSpark will need to explore the possibility of users using anonymous account
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="usability">
 <h2>Usability</h2>
 <p>
 Simplicity is key; with the fast pace of life it takes time, courage, initiative, and frankly, a good memory, to post problems or ideas on a site.  Today, smartphone users have an extremely short attention span.  Google made it quick, easy, and convenient to do research.  Facebook did the same thing for posting updates to a personal page.  SolveSpark will strive to do the same by minimizing the complexities of logging a problem or idea.  
@@ -227,7 +264,7 @@ The interface will remain simple to reach the broadest audience.  However, there
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="transparency">
 <h2>Transparency vs. masking data</h2>
 <p>
 SolveSpark aims to be 100% transparent, however, will mask offensive content to protect minors as well as hateful content deemed meritless or destructive from public view to mitigate the spread of hateful and destructive messages.  Masked content may still be viewed by users over the age of 18 if they decide to click the appropriate option.  All content will be retained in the event that the information becomes important in decision-making, research, or federal investigations.
@@ -236,8 +273,8 @@ SolveSpark's analytics may produce a legitimacy rating for each problem-solution
 </p>
 </div>
 
-<div class="row">
-<h2>Example use case: DC area commute</h2>
+<div class="row" id="usecase">
+<h2>Example use case:  DC area commute</h2>
 <p>
 There are plenty of places on the Internet where people can vent their frustrations.  Additionally, there are now a lot of wonderful places where the highly motivated can take their ideas and turn them into something great.
 </p><p>
@@ -251,7 +288,7 @@ SolveSpark will not only provide a place where people can easily vent their frus
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="usertypes">
 <h2>User types</h2>
 <p>
 <ol type="1">
@@ -265,7 +302,7 @@ SolveSpark will not only provide a place where people can easily vent their frus
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="bigpicture">
 <h2>The Big picture and complexity of data</h2>
 <p>
 Breaking down a problem into its individual components may be simple, but world is complex and made up of a dizzying array of intertwined relationships.  Solving one problem may have unpredictable ripple effects on other problems.  Solving many problems at once may introduce a dangerous amount of complexity and uncertainty to the world.  Part of the project management process involves identifying constraints, assumptions, risks, and other factors attributed to the problem scenario.  With robust analytics we hope to capture the relationships between these factors and those of other problems.  The development of simulators will hopefully help mitigate these risks.
@@ -275,7 +312,7 @@ Additionally, any assumptions and presumed facts that have the potential influen
 </p>
 </div>
 
-<div class="row">
+<div class="row" id="integration">
 <h2>Integrating with other apps</h2>
 <p>
 SolveSpark will do its best to integrate with the top social media apps as well as crowdfunding, and idea services to maximize impact.
