--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@ SolveSpark's goal is to include the entire world.  We believe that everyone's in
 SolveSpark will give people a voice; not just a voice to those who are used to speaking out, but those who are often underrepresented, like young boys and girls in Afghanistan. Cumulatively, these insights will not only spark countless revelations, but inspire a philosophy of positivity, transparency, and empowerment by showing people that together, we will solve the world's toughest challenges.
 </p>
 </div>
-        <div class="col-lg-4 text-left">
+        <div class="col-lg-6 text-left">
 <!--            <br><br><br><br> -->
 <h2>Learn more...</h2>
 <ol type="1">
@@ -243,7 +243,7 @@ Any solution that involves any harm to humans in the short term or long term is 
 <p>
 SolveSpark aims to uphold freedom of speech worldwide and protect users from retaliation or other consequences.  Users will be able to browse and post under an anonymous account that masks such identifying information as IP address, MAC address, and E-mail address from the public.
 </p><p>
-    A limit of one or two anonymous usernames can be added to each account.  The user may select from a list of system-generated usernames, containing the .
+A limit of one or two anonymous usernames can be added to each account.  The user may select from a list of system-generated usernames, containing the word "anonymous".
 </p><p>
 Because E-mail addresses can be used to identify individuals, we will mask this information from the public and encrypt the E-mail address in storage to protect users' identities in the event of a leak.
 </p><p>
