--- a/about.html
+++ b/about.html
@@ -93,6 +93,7 @@ SolveSpark will give people a voice; not just a voice to those who are used to s
 </p>
 </div>
         <div class="col-lg-6 text-left">
+            <div class="row" id="contents">
 <!--            <br><br><br><br> -->
 <h2>Learn more...</h2>
 <ol type="1">
@@ -101,7 +102,7 @@ SolveSpark will give people a voice; not just a voice to those who are used to s
 <li><a class="page-scroll" href="#keyproblems">What are the key problems SolveSpark is trying to solve?</a></li>
 <li><a class="page-scroll" href="#customer">Who is SolveSpark's primary customer?</a></li>
 <li><a class="page-scroll" href="#businessplan">What is the business plan?</a></li>
-<li><a class="page-scroll" href="#competition">Who are SolveSpark's competitors?  What is SolveSpark's competetive advantage?</a></li>
+<li><a class="page-scroll" href="#competition">Who are SolveSpark's competitors?  What is SolveSpark's competitive advantage?</a></li>
 <li><a class="page-scroll" href="#socialinpact">How will you measure social impact?</a></li>
 <li><a class="page-scroll" href="#id=innovation">What is SolveSpark's key innovation?</a></li>
 <li><a class="page-scroll" href="#principles">SolveSpark's Founding Principles</a></li>
@@ -113,6 +114,7 @@ SolveSpark will give people a voice; not just a voice to those who are used to s
 <li><a class="page-scroll" href="#bigpicture">The Big picture and complexity of data</a></li>
 <li><a class="page-scroll" href="#integration">Integrating with other apps</a></li>
 </ol>
+</div>
 </div>
 
 <!--<div class="row" id="vision">
@@ -192,7 +194,7 @@ If these revenue streams prove insufficient, SolveSpark may sell ad space. The c
 </div>
 
 <div class="row" id="competition">
-<h2>Who are SolveSpark's competitors?  What is SolveSpark's competetive advantage?</h2>
+<h2>Who are SolveSpark's competitors?  What is SolveSpark's competitive advantage?</h2>
 <p>
 SolveSpark will challenge users to think critically before arriving at a solution. Many sites promote doing great things, but SolveSpark promotes doing great things responsibly by engaging all stakeholders, defining the problem, outlining requirements, assessing risks, and comparing top solutions.
 </p><p>
