--- a/landing_new.html
+++ b/landing_new.html
@@ -69,6 +69,16 @@
             </div>
         </div>
     </div>
+<section id="blurb" class="container services">
+    <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                  <div class="navy-line"></div> 
+                    <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
+                    <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
+                </div>
+            </div>
+</section>
 
 
 <section id="trending">
@@ -184,15 +194,6 @@
 </section>
 
 <section id="about" class="container services">
-    <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                  <div class="navy-line"></div> 
-                    <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
-                    <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
-                </div>
-            </div>
-
             <div class="row">
                 <!--<div class="col-lg-5 features-text">-->
                 <div class="col-lg-12 features-text">
