--- a/landing_new.html
+++ b/landing_new.html
@@ -77,12 +77,14 @@
                     <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
                     <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
                 </div>
+                  <div class="navy-line"></div> 
             </div>
 </section>
 
 
 <section id="trending">
     <div class="row">
+        <h1>Trending issues...</h1>
                 <div class="col-md-3">
                     <div class="ibox">
                         <div class="ibox-content product-box">
@@ -191,9 +193,122 @@
                         </div>
                     </div>
                 </div>
+
+
+</div>
+                 <div class="row">
+                <div class="col-md-3">
+                    <div class="ibox">
+                        <div class="ibox-content product-box">
+
+                            <div class="product-imitation">
+                                [ INFO ]
+                            </div>
+                            <div class="product-desc">
+                                <span class="product-price">
+                                    $10
+                                </span>
+                                <small class="text-muted">Category</small>
+                                <a href="#" class="product-name"> Product</a>
+
+
+
+                                <div class="small m-t-xs">
+                                    Many desktop publishing packages and web page editors now.
+                                </div>
+                                <div class="m-t text-righ">
+
+                                    <a href="#" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ibox">
+                        <div class="ibox-content product-box">
+
+                            <div class="product-imitation">
+                                [ INFO ]
+                            </div>
+                            <div class="product-desc">
+                                <span class="product-price">
+                                    $10
+                                </span>
+                                <small class="text-muted">Category</small>
+                                <a href="#" class="product-name"> Product</a>
+
+
+
+                                <div class="small m-t-xs">
+                                    Many desktop publishing packages and web page editors now.
+                                </div>
+                                <div class="m-t text-righ">
+
+                                    <a href="#" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ibox">
+                        <div class="ibox-content product-box">
+
+                            <div class="product-imitation">
+                                [ INFO ]
+                            </div>
+                            <div class="product-desc">
+                                <span class="product-price">
+                                    $10
+                                </span>
+                                <small class="text-muted">Category</small>
+                                <a href="#" class="product-name"> Product</a>
+
+
+
+                                <div class="small m-t-xs">
+                                    Many desktop publishing packages and web page editors now.
+                                </div>
+                                <div class="m-t text-righ">
+
+                                    <a href="#" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ibox">
+                        <div class="ibox-content product-box">
+
+                            <div class="product-imitation">
+                                [ INFO ]
+                            </div>
+                            <div class="product-desc">
+                                <span class="product-price">
+                                    $10
+                                </span>
+                                <small class="text-muted">Category</small>
+                                <a href="#" class="product-name"> Product</a>
+
+
+
+                                <div class="small m-t-xs">
+                                    Many desktop publishing packages and web page editors now.
+                                </div>
+                                <div class="m-t text-righ">
+
+                                    <a href="#" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </section>
 
-<section id="about" class="container services">
+<!--<section id="about" class="container services">
             <div class="row">
                 <!--<div class="col-lg-5 features-text">-->
                 <div class="col-lg-12 features-text">
@@ -241,9 +356,9 @@
                 </div>
             </div>
         </div>
-</section>
+</section>-->
 
-<section id="timeline" class="timeline gray-section">
+<!--<section id="timeline" class="timeline gray-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -309,7 +424,7 @@
         </div>
     </div>
 
-</section>
+</section>-->
 <section id="contact" class="gray-section contact">
         <div class="container">
             <div class="row m-b-lg">
@@ -325,7 +440,7 @@
                         <a href="mailto:beth-lee@solvespark.com">beth-lee@solvespark.com</a>
                     </address>
 
-                </div> </div></div>
+                </div> </div>
              <!-- <div class="col-lg-4">
             
             </div> -->
@@ -348,7 +463,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
                     <p>&copy; 2016 Beth Lee <br/></p>
                 </div>
-            </div>
+            </div></div>
 
     </section>
 
