--- a/landing_new.html
+++ b/landing_new.html
@@ -76,14 +76,15 @@
                   <div class="navy-line"></div> 
                     <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
                     <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
+                    <div class="navy-line"></div>
                 </div>
-                  <div class="navy-line"></div> 
+                   
             </div>
 </section>
 
 
 <section id="trending">
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content">
     <div class="row">
         <h1>Trending issues...</h1>
                 <div class="col-md-3">
